feat: persist platform resources and improve live console